[package]
name = "remoteloop"
version = "0.1.0"
description = "Remote touchpad — control your PC from your phone"
authors = []
edition = "2021"

[lib]
name = "remoteloop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server + WebSocket
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

# Mouse/keyboard simulation
enigo = "0.6"

# QR code generation as SVG
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Discover LAN IP
local-ip-address = "0.6"
